--- a/profileapp/templates/home.html
+++ b/profileapp/templates/home.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Testing</title>
+    <title>Profile Service</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
-    <p>Testing testing</p>
+    <h1>ProfileService</h1>
+    <img src="https://nden.com.ar/uploads/noticias/5/2020/08/20200812090356_deg.jpg" alt="Norbert">
+    <p>De Goas Edition</p>
 </body>
 </html>
